# duckdb-http-client

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: domain_inference.yaml  physical_properties.yaml
cmake/: embed_sql.py
docs/: TODO-enterprise.md  design-notes-http-layering.md  design-review-v0.md
duckdb_ext/src/: bhttp_ext.cpp  bhttp_ext.hpp  bhttp_functions.cpp
include/: http_config.hpp  lru_pool.hpp  negotiate_auth.hpp  rate_limiter.hpp
python/: bindings.cpp
python/blobhttp/: __init__.py
sql/: http_config.sql  http_config_helpers.sql  http_verbs.sql
sqlite_ext/src/: bhttp_sqlite.cpp
src/: http_client_extension.cpp  http_functions.cpp  negotiate_auth.cpp
src/include/: http_client_extension.hpp  http_config.hpp  lru_pool.hpp  negotiate_auth.hpp  rate_limiter.hpp
test/: flask_concurrency_server.py  flask_negotiate_server.py  flask_proxy_server.py  flask_ratelimit_server.py  test_integration.py  test_ratelimit.py
test/sql/: http_client.test  http_client_local.test  http_client_server.test
